--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,13 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "io.ratpack:ratpack-gradle:1.4.5"
+    }
+}
 
+apply plugin: "io.ratpack.ratpack-java"
 apply plugin: 'java'
 
 repositories {
@@ -6,7 +15,11 @@ repositories {
 }
 
 dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.12'
-    
+    testCompile ratpack.dependency('test')
+    testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+    testCompile 'cglib:cglib:2.2.2'
+    testCompile 'org.objenesis:objenesis:2.1'
+    compile 'org.slf4j:slf4j-api:1.7.21'
     testCompile 'junit:junit:4.12'
+
 }
