more libraries added

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     }
     dependencies {
         classpath "io.ratpack:ratpack-gradle:1.4.5"
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.2.RELEASE")
     }
 }
 
@@ -18,8 +19,10 @@ repositories {
 }
 
 dependencies {
+    compile('io.ratpack:ratpack-spring-boot:1.2.0')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile 'org.slf4j:slf4j-api:1.7.21'
+    
     testCompile ratpack.dependency('test')
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
     testCompile 'cglib:cglib:2.2.2'
