--- a/build.gradle
+++ b/build.gradle
@@ -19,14 +19,17 @@ repositories {
 }
 
 dependencies {
-    compile('io.ratpack:ratpack-spring-boot:1.2.0')
+    compile ratpack.dependency("spring-boot")
     compile('org.springframework.boot:spring-boot-starter-web')
     compile 'org.slf4j:slf4j-api:1.7.21'
-    
-    testCompile ratpack.dependency('test')
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.5.2.RELEASE'
+    compile 'com.h2database:h2:1.4.194'
+    compile 'org.projectlombok:lombok:1.16.16'
+
+
+  testCompile ratpack.dependency('test')
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
     testCompile 'cglib:cglib:2.2.2'
     testCompile 'org.objenesis:objenesis:2.1'
-    testCompile 'junit:junit:4.12'
 
 }
