--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+country:
+ defaultlimit: 5
+ resolver:
+  url: freegeoip.net/json/
+
 logging:
   pattern:
     console: '%date - [%level] - %logger %thread %X{transId} %n%message%n%xException%n'
