--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
   compile 'com.h2database:h2:1.4.194'
   compile 'org.projectlombok:lombok:1.16.16'
   compile 'org.springframework.boot:spring-boot-starter-data-rest'
+  compile 'org.springframework.cloud:spring-cloud-starter-hystrix:1.2.6.RELEASE'
+  compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.8.7'
 
   testCompile 'org.springframework.boot:spring-boot-starter-test:1.5.2.RELEASE'
   testCompile 'org.spockframework:spock-core:1.1-groovy-2.4-rc-4'
