--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 country:
  defaultlimit: 5
  resolver:
-  url: freegeoip.net/json/
+  url: https://freegeoip.net/json/
 badwords: badword1,badword2,badword3
 logging:
   pattern:
