--- a/build.gradle
+++ b/build.gradle
@@ -1,41 +1,36 @@
 buildscript {
-  repositories {
-    jcenter()
-  }
-  dependencies {
-    classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.2.RELEASE")
-  }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.6.RELEASE")
+    }
 }
-
-
 plugins {
-  id 'org.springframework.boot' version '1.5.2.RELEASE'
-  id 'java'
-  id 'idea'
-  id 'groovy'
-}
-
-bootRun {
-  jvmArgs = ["-Djava.net.preferIPv4Stack=true"]
+    id 'java'
+    id 'idea'
+    id 'groovy'
+    id 'org.springframework.boot'
+    id 'io.spring.dependency-management'
 }
 
 repositories {
-  jcenter()
+    mavenCentral()
 }
 
 dependencies {
-  ext['spock.version'] = '1.1-groovy-2.4-rc-4'
-  compile 'org.slf4j:slf4j-api:1.7.21'
-  compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.5.2.RELEASE'
-  compile 'com.h2database:h2:1.4.194'
-  compile 'org.projectlombok:lombok:1.16.16'
-  compile 'org.springframework.boot:spring-boot-starter-data-rest'
-  compile 'org.springframework.cloud:spring-cloud-starter-hystrix:1.2.6.RELEASE'
-  compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.8.7'
+    ext['spock.version'] = '1.2-groovy-2.5'
+    compile 'org.slf4j:slf4j-api:1.7.21'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.0.6.RELEASE'
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.2'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.6.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: '2.0.6.RELEASE'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix', version: '1.4.6.RELEASE'
+    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.7'
 
-  testCompile 'org.springframework.boot:spring-boot-starter-test:1.5.2.RELEASE'
-  testCompile 'org.spockframework:spock-core:1.1-groovy-2.4-rc-4'
-  testCompile 'org.spockframework:spock-spring:1.1-groovy-2.4-rc-4'
+    testCompile 'org.springframework.boot:spring-boot-starter-test:2.0.6.RELEASE'
+    testCompile 'org.spockframework:spock-core:1.2-groovy-2.5'
+    testCompile 'org.spockframework:spock-spring:1.2-groovy-2.5'
 
-  testRuntime 'cglib:cglib-nodep:3.2.4'
+    testRuntime 'cglib:cglib-nodep:3.2.4'
 }
